<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.attaurrahman.e_complaint.fragment.Complaint_Fragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_complaint_" />

    <fragment
        android:id="@+id/nav_complaint"
        android:name="com.example.attaurrahman.e_complaint.activity.ui.gallery.GalleryFragment"
        android:label="@string/menu_complaint"
        tools:layout="@layout/fragment_my_complaint" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.attaurrahman.e_complaint.activity.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_slideshow" />
</navigation>