<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.attaurrahman.e_complaint.fragment.ChangePasswordFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@mipmap/image"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_ecomplaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/complaint"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/arrow" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp">

                <EditText
                    android:id="@+id/et_newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="@dimen/edit_text_left_right_margin"
                    android:layout_marginStart="@dimen/edit_text_left_right_margin"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@drawable/et_dots"
                    android:hint="@string/newPassword"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/text_padding_left"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/et_forgetPassword_retypePassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="@dimen/edit_text_left_right_margin"
                    android:layout_marginStart="@dimen/edit_text_left_right_margin"
                    android:layout_marginTop="@dimen/edit_text_top_margin"
                    android:background="@drawable/et_dots"
                    android:hint="@string/retypePassword"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/text_padding_left"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/btn_change_password_submit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widget_height"
                    android:layout_marginEnd="@dimen/widget_margin"
                    android:layout_marginStart="@dimen/widget_margin"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@drawable/round_corners_button_view"
                    android:text="@string/submit"
                    android:textColor="#fff"
                    android:textStyle="bold" />


            </LinearLayout>
        </TableLayout>
    </ScrollView>

</LinearLayout>
